contact창에 지도 추가 및 디자인 변경/전체적인 배경색 변경

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <main id="main">
 
     <!-- ======= About Me Section ======= -->
-    <section id="about" class="about">
+    <section id="about" class="about" style="background-color:#f9f2eb">
 
       <div class="container">
 
@@ -300,6 +300,7 @@
 
     <section id="Motto" class="testimonials">
       <div class="container position-relative">
+        <span style="font-weight:bold;font-size:50px;color:cornsilk;text-align:center">Motto</span>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
@@ -383,7 +384,7 @@
 
 
     <!-- ======= My Resume Section ======= -->
-    <section id="resume" class="resume">
+    <section id="resume" class="resume" style="background-color:#fbf0f0">
       <div class="container">
 
         <div class="section-title">
@@ -392,11 +393,11 @@
           <p>약 2년 간의 여행, 취미 기록</p>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-top:40px">
           <div class="col-lg-6">
-            <h3 class="resume-title">University</h3>
+            <h3 class="resume-title" style="font-size:33px">University</h3>
             <div class="resume-item pb-0">
-              <h4>Dongduk Women's University</h4>
+              <h4 style="font-size:18px">Dongduk Women's University</h4>
               <h5>2021</h5>
 
               <ul>
@@ -411,9 +412,9 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">Traveling</h3>
+            <h3 class="resume-title" style="font-size:33px">Traveling</h3>
             <div class="resume-item">
-              <h4>Family</h4>
+              <h4 style="font-size:18px">Family</h4>
               <h5>2021</h5>
               <ul>
               <li>부산 가족 여행 <span style="color:darkred">( 2/10~12 )</span></li>
@@ -427,7 +428,7 @@
 
             </div>
             <div class="resume-item">
-              <h4>Friend</h4>
+              <h4 style="font-size:18px">Friend</h4>
               <h5>2021</h5>
               <ul>
               <li>경기도 근교 글램핑 <span style="color:darkred">( 6/29~30 )</span></li>
@@ -441,9 +442,9 @@
           </div>
 
           <div class="col-lg-4">
-            <h3 class="resume-title">Hobby</h3>
+            <h3 class="resume-title" style="font-size:33px">Hobby</h3>
             <div class="resume-item">
-              <h4>Drawing</h4>
+              <h4 style="font-size:18px">Drawing</h4>
               <div id="demo" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
@@ -514,7 +515,7 @@
             <br>
 
             <div class="resume-item">
-              <h4>Musical</h4>
+              <h4 style="font-size:18px">Musical</h4>
               <h5>2021</h5>
               <ul>
                 <li>뮤지컬 팬텀 - 샤롯데씨어터</li>
@@ -662,7 +663,6 @@
         <div class="section-title">
           <span>Contact Me</span>
           <h2>Contact Me</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
         </div>
 
         <div class="row">
@@ -671,17 +671,11 @@
 
             <div class="row">
               <div class="col-md-12">
-                <div class="info-box">
-                  <i class="bx bx-share-alt"></i>
-                  <h3>Social Profiles</h3>
-                  <div class="social-links">
-                    <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                    <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                    <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-                    <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
+
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.8021033683394!2d127.04018915130463!3d37.60681627969117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671737680300!5m2!1sko!2skr"
+                          width="635" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
@@ -705,24 +699,24 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <span style="font-weight:bold;color:#1b4855">NAME</span><input type="text" name="name" class="form-control" id="name" placeholder="emma" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <span style="font-weight:bold;color:#1b4855">EMAIL</span><input type="email" class="form-control" name="email" id="email" placeholder="oooo@gamil.com" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                <span style="font-weight:bold;color:#1b4855">SUBJECT</span><input type="text" class="form-control" name="subject" id="subject" placeholder="contact" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
+                <span style="font-weight:bold;color:#1b4855">MESSAGE</span><textarea class="form-control" name="message" rows="6" placeholder="Write it here" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit" style="color:white">Send Message</button></div>
             </form>
           </div>
 
@@ -736,15 +730,8 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Laura Thomson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
-      <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
+      <h3>Jiyeon Han</h3>
+
       <div class="copyright">
         &copy; Copyright <strong><span>Laura</span></strong>. All Rights Reserved
       </div>
