--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="lab/lab01_01.html" target="_blank">Lab1</a></h4>
 
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p class="description">Elvis Presley - 웹페이지 구성 요소</p>
 
             </div>
           </div>
@@ -144,7 +144,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="lab/lab02_01.html" target="_blank">lab2</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">Elvis Presley - 웹 페이지의 구성요소</p>
             </div>
           </div>
 
@@ -152,7 +152,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="lab/lab03_01.html" target="_blank">lab3_1</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">한용운의 님의 침묵 - p태그 사용 예제</p>
             </div>
           </div>
 
@@ -160,7 +160,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="lab/lab03_02.html" target="_blank">lab3_2</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p class="description">HTML5 문서 구조 시맨틱 태그 사용</p>
             </div>
           </div>
 
@@ -170,7 +170,7 @@
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="lab/lab03_03.html" target="_blank">Lab3_3</a></h4>
 
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p class="description">시맨틱 태그로 구조화 연습 - style 태그 사용</p>
 
             </div>
           </div>
@@ -180,7 +180,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="lab/lab04_01.html" target="_blank">lab4_1</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">기본 테이블 만들기 - 1900 ~ 1903 개체수의 추이</p>
             </div>
           </div>
 
@@ -188,7 +188,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="lab/lab04_02.html" target="_blank">lab4_2</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">셀 병합 - 셀 병합 테이블 만들어보기</p>
             </div>
           </div>
 
@@ -196,7 +196,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="lab/lab04_03.html" target="_blank">lab4_3</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p class="description">링크 만들기 - 뉴스 링크 걸어보기</p>
             </div>
           </div>
 
@@ -206,7 +206,7 @@
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="lab/lab04_04.html" target="_blank">Lab4_4</a></h4>
 
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p class="description">텍스트 입력 요소 연습 - 자기 소개서 작성</p>
 
             </div>
           </div>
@@ -215,7 +215,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="lab/lab05_01.html" target="_blank">lab5_1</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">폼 입력 요소 - option 태그 사용해보기</p>
             </div>
           </div>
 
